--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.vscode
+.idea
+*.iml
+.classpath
+.project
+.settings
+.DS_Store
+
+# Maven
+target
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +138,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Nodejs
+node_modules
+coverage
+docs
