--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ jobs:
   include:
     - language: python
       python: 3.9
-      before_script:
+      before_install:
         - cd python
       install:
         - pip3 install -r requirements.txt
@@ -11,7 +11,7 @@ jobs:
 
     - language: javascript
       node: 16
-      before_script:
+      before_install:
         - cd javascript
       install:
         - npm i
